--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "dayjs": "^1.11.12",
     "nuxt-microcms-module": "^3.0.2",
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@tailwindcss/typography": "^0.5.13",
     "eslint-plugin-vue": "^9.27.0",
     "nuxt": "^3.12.4"
   }
